--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
-    "aos": "^2.3.4",
     "axios": "^1.13.2",
     "daisyui": "^5.4.7",
     "firebase": "^12.5.0",
     "lucide-react": "^0.553.0",
     "motion": "^12.23.24",
     "react": "^19.1.1",
+    "react-awesome-reveal": "^4.3.1",
     "react-datepicker": "^8.8.0",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
@@ -26,7 +26,6 @@
     "react-loader-spinner": "^8.0.0",
     "react-router": "^7.9.5",
     "react-slot-counter": "^3.3.1",
-    "react-spinners": "^0.17.0",
     "react-tabs": "^6.1.0",
     "sweetalert2": "^11.26.3",
     "swiper": "^12.0.3",
